--- a/index.html
+++ b/index.html
@@ -213,113 +213,26 @@
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="column">
-                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">Magnet</h5>
-                <p style="font-size: large">$5</p>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <div class="row">
                     <div class="one-half column">
-                        <img src="img/black hat.jpg" style="height: 85px;" />
+                        <img src="img/grey tee.jpg" style="width: 80px;" />
                     </div>
                     <div class="one-half column">
-                        <img src="img/white hat.jpg" style="height: 85px;" />
+                        <img src="img/maroon tee.jpg" style="width: 80px;" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="column">
-                        <img src="img/grey hat.jpg" style="height: 85px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">Hats</h5>
-                <p style="font-size: large">$20</p>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <div class="row">
-                    <div class="column">
-                        <img src="" style="height: 150px;" />
+                        <img src="img/white tee.jpg" style="height: 80px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0;">Tees</h5>
                 <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
                 <p style="font-size: large">$15</p>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="EQ8TCQ9F65TFY">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
-                        </table>
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                </center>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="HX5BP9ADS586S">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Color">Color</td></tr><tr><td><select name="os0">
-                            <option value="Black">Black $20.00 USD</option>
-                            <option value="White">White $20.00 USD</option>
-                            <option value="Grey">Grey $20.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-                        </table>
-                        <input type="hidden" name="currency_code" value="USD">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>                      
-                </center>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="H2T5CFUV294TW">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
-                            <option value="S - Sport Grey">S - Sport Grey $15.00 USD</option>
-                            <option value="M - Sport Grey">M - Sport Grey $15.00 USD</option>
-                            <option value="L - Sport Grey">L - Sport Grey $15.00 USD</option>
-                            <option value="XL - Sport Grey">XL - Sport Grey $15.00 USD</option>
-                            <option value="XXL - Sport Grey">XXL - Sport Grey $15.00 USD</option>
-                            <option value="S - Antique Cherry">S - Antique Cherry $15.00 USD</option>
-                            <option value="M - Antique Cherry">M - Antique Cherry $15.00 USD</option>
-                            <option value="L - Antique Cherry">L - Antique Cherry $15.00 USD</option>
-                            <option value="XL - Antique Cherry">XL - Antique Cherry $15.00 USD</option>
-                            <option value="XXL - Antique Cherry">XXL - Antique Cherry $15.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-                        </table>
-                        <input type="hidden" name="currency_code" value="USD">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                </center>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="section" style="padding-top: 3rem;">
-    <div class="container">
-        <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="" style="height: 85px;" />
+                        <img src="img/hoodie.jpg" style="height: 188px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0;">Hoodie</h5>
@@ -328,17 +241,49 @@
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="column">
-                        <img src="" style="height: 150px;" />
+                    <div class="one-half column">
+                        <img src="img/black hat.jpg" style="height: 120px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/white hat.jpg" style="height: 120px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Long sleve</h5>
-                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
-                <p style="font-size: large">$25</p>
+                <div class="row">
+                    <div class="column">
+                        <img src="img/grey hat.jpg" style="height: 102px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hats</h5>
+                <p style="font-size: large">$20</p>
             </div>
         </div>
 
         <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="H2T5CFUV294TW">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
+                        <option value="Sport Grey">Sport Grey $15.00 USD</option>
+                        <option value="White">White $15.00 USD</option>
+                        <option value="Antique Cherry">Antique Cherry $15.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Size">Size</td></tr><tr><td><select name="os1">
+                        <option value="S">S </option>
+                        <option value="M">M </option>
+                        <option value="L">L </option>
+                        <option value="XXL">XXL </option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -364,6 +309,56 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="HX5BP9ADS586S">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color">Color</td></tr><tr><td><select name="os0">
+                            <option value="Black">Black $20.00 USD</option>
+                            <option value="White">White $20.00 USD</option>
+                            <option value="Grey">Grey $20.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>                      
+                </center>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="section" style="padding-top: 3rem;">
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Long sleeve sport-tek.jpg" style="height: 133px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Long sleve</h5>
+                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
+                <p style="font-size: large">$25</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Magnet</h5>
+                <p style="font-size: large">$5</p>
+                <br/>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
                         <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
@@ -376,6 +371,19 @@
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="EQ8TCQ9F65TFY">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
