--- a/index.html
+++ b/index.html
@@ -241,20 +241,13 @@
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="one-half column">
-                        <img src="img/black hat.jpg" style="height: 120px;" />
-                    </div>
-                    <div class="one-half column">
-                        <img src="img/white hat.jpg" style="height: 120px;" />
-                    </div>
-                </div>
-                <div class="row">
                     <div class="column">
-                        <img src="img/grey hat.jpg" style="height: 102px;" />
+                        <img src="img/Long sleeve sport-tek.jpg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Hats</h5>
-                <p style="font-size: large">$20</p>
+                <h5 style="margin: 0;">Long sleve</h5>
+                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
+                <p style="font-size: large">$25</p>
             </div>
         </div>
 
@@ -309,56 +302,6 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="HX5BP9ADS586S">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Color">Color</td></tr><tr><td><select name="os0">
-                            <option value="Black">Black $20.00 USD</option>
-                            <option value="White">White $20.00 USD</option>
-                            <option value="Grey">Grey $20.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-                        </table>
-                        <input type="hidden" name="currency_code" value="USD">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>                      
-                </center>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="section" style="padding-top: 3rem;">
-    <div class="container">
-        <div class="row">
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <div class="row">
-                    <div class="column">
-                        <img src="img/Long sleeve sport-tek.jpg" style="height: 133px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">Long sleve</h5>
-                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
-                <p style="font-size: large">$25</p>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <div class="row">
-                    <div class="column">
-                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">Magnet</h5>
-                <p style="font-size: large">$5</p>
-                <br/>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
                         <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
@@ -374,6 +317,63 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
+                </center>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="section" style="padding-top: 3rem; margin: auto;">
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/black hat.jpg" style="height: 90px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/white hat.jpg" style="height: 90px;" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column">
+                        <img src="img/grey hat.jpg" style="height: 84px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hats</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Magnet (1).JPG" style="height: 157px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Magnet</h5>
+                <p style="font-size: large">$5</p>
+                <br/>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="HX5BP9ADS586S">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color">Color</td></tr><tr><td><select name="os0">
+                            <option value="Black">Black $20.00 USD</option>
+                            <option value="White">White $20.00 USD</option>
+                            <option value="Grey">Grey $20.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>                      
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
