--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <img src="img/Long sleeve sport-tek.jpg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Long sleve</h5>
+                <h5 style="margin: 0;">Long sleeve</h5>
                 <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
                 <p style="font-size: large">$25</p>
             </div>
