--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
+                        <input type="hidden" name="hosted_button_id" value="4FT6AGGRUBF8N">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
@@ -245,7 +245,7 @@
                         <img src="img/Long sleeve sport-tek.jpg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Long sleeve</h5>
+                <h5 style="margin: 0;">Long sleve</h5>
                 <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
                 <p style="font-size: large">$25</p>
             </div>
@@ -342,6 +342,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Hats</h5>
+                <p style="font-size: x-small">(brushed cotton twill hat with embroidered logo)</p>
                 <p style="font-size: large">$20</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
