--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <h5 style="margin: 0;">Tumbler</h5>
                 <p style="font-size: x-small">(The Ally - 18 oz Stainless Steel Straight Wall Tumbler)</p>
-                <p style="font-size: large">$15</p>
+                <p style="font-size: large">$20</p>
             </div>
         </div>
 
@@ -351,7 +351,7 @@
                         <img src="img/Magnet (1).JPG" style="height: 157px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Magnet</h5>
+                <h5 style="margin: 0;">Car Magnet</h5>
                 <p style="font-size: large">$5</p>
                 <br/>
             </div>
