--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="4FT6AGGRUBF8N">
+                        <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
