--- a/index.html
+++ b/index.html
@@ -267,9 +267,10 @@
                         <option value="S">S </option>
                         <option value="M">M </option>
                         <option value="L">L </option>
+                        <option value="XL">XL </option>
                         <option value="XXL">XXL </option>
                         </select> </td></tr>
-                        <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200" required></td></tr>
+                        <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200"></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
