--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <img src="img/hoodie.jpg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Hoodie</h5>
+                <h5 style="margin: 0;">Lightweight Hoodie</h5>
                 <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
                 <p style="font-size: large">$30</p>
             </div>
