--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <option value="XL">XL $10.00 USD</option>
                             <option value="XXL">XXL $10.00 USD</option>
                         </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)" required>Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
@@ -171,7 +171,7 @@
                         <input type="hidden" name="cmd" value="_s-xclick">
                         <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)" required>Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
@@ -270,7 +270,7 @@
                         <option value="XL">XL </option>
                         <option value="XXL">XXL </option>
                         </select> </td></tr>
-                        <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200" required></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
