--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/hoodie.jpg" style="height: 188px;" />
+                        <img src="img/hoodie v2.jpeg" style="height: 188px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0;">Lightweight Hoodie</h5>
