--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <input type="hidden" name="hosted_button_id" value="5TNJZNCEG38A2">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                            <option value="S">S $10.00 USD</option>
-                            <option value="M">M $10.00 USD</option>
+                            <option value="S" disabled>S SOLD OUT</option>
+                            <option value="M" disabled>M SOLD OUT</option>
                             <option value="L">L $10.00 USD</option>
                             <option value="XL">XL $10.00 USD</option>
                             <option value="XXL">XXL $10.00 USD</option>
