--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <img src="img/hoodie v2.jpeg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Lightweight Hoodie</h5>
+                <h5 style="margin: 0;">Lightweight Hoodie (Maroon imprint)</h5>
                 <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
                 <p style="font-size: large">$30</p>
             </div>
@@ -355,6 +355,16 @@
                 <p style="font-size: large">$5</p>
                 <br/>
             </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/hoodie w white.jpg" style="height: 188px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Lightweight Hoodie (White imprint)</h5>
+                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
+                <p style="font-size: large">$30</p>
+            </div>
         </div>
 
         <div class="row">
@@ -384,6 +394,25 @@
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="M">M $30.00 USD</option>
+                        <option value="L">L $30.00 USD</option>
+                        <option value="XL">XL $30.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
