--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/Long sleeve sport-tek.jpg" style="height: 188px;" />
+                        <img src="img/hoodie w white.jpg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Long sleve</h5>
-                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
-                <p style="font-size: large">$25</p>
+                <h5 style="margin: 0;">Lightweight Hoodie (White imprint)</h5>
+                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
+                <p style="font-size: large">$30</p>
             </div>
         </div>
 
@@ -268,7 +268,7 @@
                         <option value="M">M </option>
                         <option value="L">L </option>
                         <option value="XL">XL </option>
-                        <option value="XXL">XXL </option>
+                        <option value="XXL">XXL</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200" required></td></tr>
                         </table>
@@ -289,7 +289,7 @@
                             <option value="M">M $30.00 USD</option>
                             <option value="L">L $30.00 USD</option>
                             <option value="XL">XL $30.00 USD</option>
-                            <option value="XXL">XXL $30.00 USD</option>
+                            <option value="XXL" disabled>XXL $30.00 USD (SOLD OUT)</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -300,16 +300,15 @@
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>     
+                <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
+                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                            <option value="M">M $25.00 USD</option>
-                            <option value="L">L $25.00 USD</option>
-                            <option value="XL">XL $25.00 USD</option>
-                            <option value="XXL">XXL $25.00 USD</option>
+                        <option value="M">M $30.00 USD</option>
+                        <option value="L">L $30.00 USD</option>
+                        <option value="XL">XL $30.00 USD</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -358,12 +357,12 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/hoodie w white.jpg" style="height: 188px;" />
+                        <img src="img/Long sleeve sport-tek.jpg" style="height: 188px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Lightweight Hoodie (White imprint)</h5>
-                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
-                <p style="font-size: large">$30</p>
+                <h5 style="margin: 0;">Long sleve</h5>
+                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
+                <p style="font-size: large">$25</p>
             </div>
         </div>
 
@@ -400,15 +399,16 @@
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
+                <center>     
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
+                        <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                        <option value="M">M $30.00 USD</option>
-                        <option value="L">L $30.00 USD</option>
-                        <option value="XL">XL $30.00 USD</option>
+                            <option value="M">M $25.00 USD</option>
+                            <option value="L">L $25.00 USD</option>
+                            <option value="XL">XL $25.00 USD</option>
+                            <option value="XXL">XXL $25.00 USD</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
