--- a/index.html
+++ b/index.html
@@ -213,41 +213,27 @@
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="one-half column">
-                        <img src="img/grey tee.jpg" style="width: 80px;" />
-                    </div>
-                    <div class="one-half column">
-                        <img src="img/maroon tee.jpg" style="width: 80px;" />
-                    </div>
+                    <img src="img/grey tee.jpg" style="height: 188px;" />
                 </div>
-                <div class="row">
-                    <div class="column">
-                        <img src="img/white tee.jpg" style="height: 80px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">Tees</h5>
+                <h5 style="margin: 0;">Grey Tee</h5>
                 <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
                 <p style="font-size: large">$15</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="column">
-                        <img src="img/hoodie v2.jpeg" style="height: 188px;" />
-                    </div>
+                    <img src="img/maroon tee.jpg" style="height: 188px;" />
                 </div>
-                <h5 style="margin: 0;">Lightweight Hoodie (Maroon imprint)</h5>
-                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
-                <p style="font-size: large">$30</p>
+                <h5 style="margin: 0;">Maroon Tee</h5>
+                <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
+                <p style="font-size: large">$15</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="column">
-                        <img src="img/hoodie w white.jpg" style="height: 188px;" />
-                    </div>
+                    <img src="img/white tee.jpg" style="height: 188px;" />
                 </div>
-                <h5 style="margin: 0;">Lightweight Hoodie (White imprint)</h5>
-                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
-                <p style="font-size: large">$30</p>
+                <h5 style="margin: 0;">White Tee</h5>
+                <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
+                <p style="font-size: large">$15</p>
             </div>
         </div>
 
@@ -259,37 +245,32 @@
                         <input type="hidden" name="hosted_button_id" value="H2T5CFUV294TW">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
-                        <option value="Sport Grey">Sport Grey $15.00 USD</option>
-                        <option value="White">White $15.00 USD</option>
-                        <option value="Antique Cherry">Antique Cherry $15.00 USD</option>
+                        <option value="S">S $15.00 USD</option>
+                        <option value="M">M $15.00 USD</option>
+                        <option value="L">L $15.00 USD</option>
+                        <option value="XL">XL $15.00 USD</option>
+                        <option value="XXL">XXL $15.00 USD</option>
                         </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Size">Size</td></tr><tr><td><select name="os1">
-                        <option value="S">S </option>
-                        <option value="M">M </option>
-                        <option value="L">L </option>
-                        <option value="XL">XL </option>
-                        <option value="XXL">XXL</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on2" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os2" maxlength="200" required></td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
+                    </form>                        
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="AVG8PDC2CC5D6">
+                        <input type="hidden" name="hosted_button_id" value="SDG5QHE6HF7ZY">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                            <option value="S">S $30.00 USD</option>
-                            <option value="M">M $30.00 USD</option>
-                            <option value="L" disabled>L $30.00 USD (SOLD OUT)</option>
-                            <option value="XL">XL $30.00 USD</option>
-                            <option value="XXL">XXL $30.00 USD</option>
+                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $15.00 USD</option>
+                        <option value="M">M $15.00 USD</option>
+                        <option value="L">L $15.00 USD</option>
+                        <option value="XL">XL $15.00 USD</option>
+                        <option value="XXL" disabled>XXL $15.00 USD (SOLD OUT)</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -303,12 +284,14 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
+                        <input type="hidden" name="hosted_button_id" value="64SXLUGVSVDPS">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                        <option value="M">M $30.00 USD</option>
-                        <option value="L" disabled>L $30.00 USD (SOLD OUT)</option>
-                        <option value="XL">XL $30.00 USD</option>
+                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $15.00 USD</option>
+                        <option value="M">M $15.00 USD</option>
+                        <option value="L">L $15.00 USD</option>
+                        <option value="XL">XL $15.00 USD</option>
+                        <option value="XXL">XXL $15.00 USD</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -421,6 +404,78 @@
         </div>
     </div>
 </div>
+
+
+<div class="section" style="padding-top: 3rem; margin: auto;">
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/hoodie v2.jpeg" style="height: 188px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Lightweight Hoodie (Maroon imprint)</h5>
+                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
+                <p style="font-size: large">$30</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/hoodie w white.jpg" style="height: 188px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Lightweight Hoodie (White imprint)</h5>
+                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
+                <p style="font-size: large">$30</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="AVG8PDC2CC5D6">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                            <option value="S">S $30.00 USD</option>
+                            <option value="M">M $30.00 USD</option>
+                            <option value="L" disabled>L $30.00 USD (SOLD OUT)</option>
+                            <option value="XL">XL $30.00 USD</option>
+                            <option value="XXL">XXL $30.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="M">M $30.00 USD</option>
+                        <option value="L" disabled>L $30.00 USD (SOLD OUT)</option>
+                        <option value="XL">XL $30.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 <!-- The Modal -->
