--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/hoodie v2.jpeg" style="height: 188px;" />
+                        <img src="img/hoodie with maroon.jpg" style="height: 188px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0;">Lightweight Hoodie (Maroon imprint)</h5>
@@ -441,7 +441,7 @@
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
                             <option value="S">S $30.00 USD</option>
                             <option value="M">M $30.00 USD</option>
-                            <option value="L" disabled>L $30.00 USD (SOLD OUT)</option>
+                            <option value="L">L $30.00 USD</option>
                             <option value="XL">XL $30.00 USD</option>
                             <option value="XXL">XXL $30.00 USD</option>
                         </select> </td></tr>
