--- a/index.html
+++ b/index.html
@@ -100,30 +100,7 @@
                 </div>
                 <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2022 T-Shirt 👈</h5>
                 <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
-                <p style="font-size: large">$10</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="column">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="5TNJZNCEG38A2">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                            <option value="S" disabled>S SOLD OUT</option>
-                            <option value="M" disabled>M SOLD OUT</option>
-                            <option value="L">L $10.00 USD</option>
-                            <option value="XL">XL $10.00 USD</option>
-                            <option value="XXL">XXL $10.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)" required>Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
-                        </table>
-                        <input type="hidden" name="currency_code" value="USD">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                </center>
+                <p style="font-size: large">Limited tees available … please see Jeanne Braun for $10 CASH purchase</p>
             </div>
         </div>
     </div>
