--- a/index.html
+++ b/index.html
@@ -240,27 +240,6 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="SDG5QHE6HF7ZY">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
-                        <option value="S">S $15.00 USD</option>
-                        <option value="M">M $15.00 USD</option>
-                        <option value="L">L $15.00 USD</option>
-                        <option value="XL">XL $15.00 USD</option>
-                        <option value="XXL" disabled>XXL $15.00 USD (SOLD OUT)</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
-                        </table>
-                        <input type="hidden" name="currency_code" value="USD">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                </center>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
                         <input type="hidden" name="hosted_button_id" value="64SXLUGVSVDPS">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
@@ -275,6 +254,16 @@
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form action="https://nam10.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.paypal.com%2Fcgi-bin%2Fwebscr&amp;data=05%7C01%7Cajr439%40drexel.edu%7C118a77a9bc4543347e0a08da29d2d53f%7C3664e6fa47bd45a696708c4f080f8ca6%7C0%7C0%7C637868282748926983%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=MW5UP46bUwlOfJvY8Ryyf%2BR5MT5LKgVVGOc33pxy5GI%3D&amp;reserved=0" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="Z6SCSB628MLQY">
+                        <input type="image" src="https://nam10.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.paypalobjects.com%2Fen_US%2Fi%2Fbtn%2Fbtn_buynowCC_LG.gif&amp;data=05%7C01%7Cajr439%40drexel.edu%7C118a77a9bc4543347e0a08da29d2d53f%7C3664e6fa47bd45a696708c4f080f8ca6%7C0%7C0%7C637868282748926983%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=pvmT7FqmDNdnOb41v5q9HSrUCJyOe1wFNcnpIfcjcA0%3D&amp;reserved=0" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://nam10.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.paypalobjects.com%2Fen_US%2Fi%2Fscr%2Fpixel.gif&amp;data=05%7C01%7Cajr439%40drexel.edu%7C118a77a9bc4543347e0a08da29d2d53f%7C3664e6fa47bd45a696708c4f080f8ca6%7C0%7C0%7C637868282748926983%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=FEl2%2FlH8BEak9rJad%2FBzEZhg1am9TAatDtbGskQgDiw%3D&amp;reserved=0" width="1" height="1">
                     </form>
                 </center>
             </div>
