--- a/index.html
+++ b/index.html
@@ -112,12 +112,11 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/Lanyard.JPG" style="height: 150px;" />
+                        <img src="" style="height: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Lanyard</h5>
-                <p style="font-size: x-small">(3/4" woven polyester)</p>
-                <p style="font-size: large">$5</p>
+                <h5 style="margin: 0;">Yard Sign</h5>
+                <p style="font-size: large">$12</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
@@ -144,13 +143,10 @@
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Email (required)" required>Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
-                        </table>
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <input type="hidden" name="hosted_button_id" value="Z6SCSB628MLQY">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
                 </center>
@@ -395,6 +391,16 @@
                 <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
                 <p style="font-size: large">$30</p>
             </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Lanyard.JPG" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Lanyard</h5>
+                <p style="font-size: x-small">(3/4" woven polyester)</p>
+                <p style="font-size: large">$5</p>
+            </div>
         </div>
 
         <div class="row">
@@ -433,6 +439,19 @@
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)" required>Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
+                        </table>
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
