--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="" style="height: 150px;" />
+                        <img src="img/sign.jpeg" style="height: 150px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0;">Yard Sign</h5>
