--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
                         <option value="M">M $30.00 USD</option>
                         <option value="L">L $30.00 USD</option>
-                        <option value="XL">XL $30.00 USD</option>
+                        <option value="XL" disabled>XL $30.00 USD (SOLD OUT)</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
