--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
                         <option value="S">S $15.00 USD</option>
-                        <option value="M">M $15.00 USD</option>
+                        <option value="M" disabled>M $15.00 USD (SOLD OUT)</option>
                         <option value="L">L $15.00 USD</option>
                         <option value="XL">XL $15.00 USD</option>
                         <option value="XXL">XXL $15.00 USD</option>
