--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
                         <input type="hidden" name="hosted_button_id" value="H2T5CFUV294TW">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
-                        <option value="S">S $15.00 USD</option>
+                        <option value="S" disabled>S $15.00 USD (SOLD OUT)</option>
                         <option value="M" disabled>M $15.00 USD (SOLD OUT)</option>
-                        <option value="L">L $15.00 USD</option>
+                        <option value="L" disabled>L $15.00 USD (SOLD OUT)</option>
                         <option value="XL">XL $15.00 USD</option>
                         <option value="XXL">XXL $15.00 USD</option>
                         </select> </td></tr>
@@ -243,7 +243,7 @@
                         <option value="M">M $15.00 USD</option>
                         <option value="L">L $15.00 USD</option>
                         <option value="XL">XL $15.00 USD</option>
-                        <option value="XXL">XXL $15.00 USD</option>
+                        <option value="XXL" disabled>XXL $15.00 USD (SOLD OUT)</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -350,7 +350,7 @@
                         <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                            <option value="M">M $25.00 USD</option>
+                            <option value="M" disabled>M $25.00 USD (SOLD OUT)</option>
                             <option value="L">L $25.00 USD</option>
                             <option value="XL">XL $25.00 USD</option>
                             <option value="XXL">XXL $25.00 USD</option>
@@ -412,7 +412,7 @@
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
                             <option value="S">S $30.00 USD</option>
-                            <option value="M">M $30.00 USD</option>
+                            <option value="M" disabled>M $30.00 USD (SOLD OUT)</option>
                             <option value="L" disabled>L $30.00 USD (SOLD OUT)</option>
                             <option value="XL">XL $30.00 USD</option>
                             <option value="XXL">XXL $30.00 USD</option>
