--- a/tee-shot.html
+++ b/tee-shot.html
@@ -80,57 +80,20 @@
     <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 16px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
-    <h4 class="hero-heading" style="color: white;">Donate</h4>
+    <h4 class="hero-heading" style="color: white;">Snappy Gilmore Tee Shot</h4>
 </div>
 <br/><br/>
 <div class="section" style="padding-top: 0rem;">
     <center>
     <div class="container">
-        <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="9KVTU8G3ZFRP4">
-            <table>
-            <tr><td><input type="hidden" name="on0" value="AMT">AMT</td></tr><tr><td><select name="os0">
-            <option value="Donate">Donate $25.00 USD</option>
-            <option value="Donate">Donate $50.00 USD</option>
-            <option value="Donate">Donate $100.00 USD</option>
-            </select> </td></tr>
-            </table>
-            <input type="hidden" name="currency_code" value="USD">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <input type="hidden" name="hosted_button_id" value="X9DBKAFRSAAJQ">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+        </form>            
     </div>
     </center>
 </div>
-
-
-<script>
-    // Get the modal
-    var modal = document.getElementById("myModal");
-
-    // Get the button that opens the modal
-    var btn = document.getElementById("myBtn");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks the button, open the modal
-    btn.onclick = function() {
-        modal.style.display = "block";
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-        modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-        if (event.target === modal) {
-            modal.style.display = "none";
-        }
-    }
-</script>
 </body>
 </html>
